4 April 2007
+ Changed to new language functionality.

26 March 2007
+ Fixed: logErrors called on blog object instead of image object
  on empty image id.

19 March 2007
+ Fixed pagination on list view.
+ Updated file templates/list_view.tpl

Version 1.4.3
------------------------------------------------------------------
8 March 2007
+ Changed sticky mechanism from saving via the object method. Switched
  to cleaner db method.

7 March 2007
+  Removed fake French translation.

6 March 2007
+ Added ability for blog entries to expire.
+ Added ability to sticky a blog entry.

5 March 2007
+ Changed control panel icon
+ Priviledged blog entries now forward to login page.

Version 1.4.2
------------------------------------------------------------------
26 February 2007
+ Fixed bug causing an error when entries were moved off the front
  page. Thanks Ann.
+ Changed admin list to show summary instead of entry data.

Version 1.4.1
------------------------------------------------------------------
Note: previous SVN versions joined into 1.4.1

20 February 2007
+ Added missing category tags.

19 February 2007
+ Removed excess translates

14 February 2007
+ Removed table format from edit form
+ Updated files: templates/edit.tpl

13 February 2007
+ Added translate function calls to various files

7 February 2007
+ Core dependency raised to 1.4.0.

5 February 2007
+ Added missing comma after image_id column

1 February 2007
+ Added ability to place images on blog entries without editor.

26 January 2007
+ Finished pagination of blog view
+ Removed test code
+ Updated files: templates/list_view.tpl

25 January 2007
+ Added pagination to blog view

19 January 2007
+ Added a setting to enable/disable the blog view caching.
+ Added link to reset the view cache.
+ Updated files : templates/settings.tpl

10 January 2007
+ Added Version module requirement
+ Added ability for anonymous and users without blog permission to
  submit entries for later approval.