@@ -1,3 +1,6 @@
+11 April 2007
++ Added extra checks for anonymous submission
+
 4 April 2007
 + Changed to new language functionality.
 
